# train-container-library

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  entrypoint.sh  pyproject.toml  requirements.md  requirements.txt  requirements_dev.txt  requirements_r.txt  requirements_r_cord.txt  requirements_slim.txt  setup.cfg  setup.py
.github/containerscan/: allowedlist.yaml
.github/workflows/: codeql-analysis.yml  main.yml  publish_test_pypi.yml
docker/: Dockerfile  Dockerfile_buster  Dockerfile_dl  Dockerfile_slim  build_images.sh  update_images.sh
docker/entrypoint/: entrypoint.sh  run_protocol.py
docker_files/: Dockerfile_buster  Dockerfile_cord  Dockerfile_dl  Dockerfile_nfcore  Dockerfile_r  Dockerfile_slim  Dockerfile_slim_new  Dockerfile_ubuntu
docs/: conf.py  index.rst
docs/modules/: client.rst  dockerUtil.rst  fhir.rst  security.rst
docs/usage/: installation.rst
examples/: ExampleTrain.py  FHIRAverageAgeTrain.py  HIV_Train.py  ISICTrain.py  NfcoreTrain.py  build_test_train.py  entrypoint.py  no_input_train.py
scripts/: custom_nextflow.config  entrypoint.sh  security_protocol.py  update_images.sh
security/: Hashing.py  KeyManager.py  SecurityProtocol.py
test/: keygen.py  populate_vault.py  sp_test.py  train_config.json
testing/: interop_testing.py  keygen.py  no_input_train.py  populate_vault.py  run_protocol.py  sp_test.py  train_config.json  unseal_vault.py
tests/security/: test_security.py
train_lib/client/: pht_client.py  rabbitmq.py
train_lib/clients/: __init__.py  fhir_client.py  pht_client.py  rabbitmq.py
train_lib/docker_util/: __init__.py  docker_ops.py  validate_base_image.py  validate_master_image.py
train_lib/fhir/: FhirLoading.py  __init__.py  docker-compose.yml  fhir_client.py  fhir_k_anonymity.py  fhir_query_builder.py  minimal_query.json  query.json
train_lib/monitoring/: Runtime.py
(+45 files in other folders)
